Bug Fix for cookie overflow on sections css

--- a/css-presets/sections.css
+++ b/css-presets/sections.css
@@ -1063,7 +1063,6 @@ section .text-image .row-wrapper {
 
 .cookieControl {
   position: relative;
-  z-index: 100000;
 }
 
 .cookieControl button {
